/* 
string first_name = 1;
1, 2, 3 are field tags. 
Used internally by Protobuf for binary encoding.
Never reuse or renumber them once published.
Lower numbers = more efficient encoding.
*/
syntax= "proto3";

package greet;

message GreetRequest{
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

service GreetService{
    rpc Greet (GreetRequest) returns (GreetResponse);
    rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
    rpc LongGreet (stream GreetRequest) returns (GreetResponse);
}
